# evm

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  3  AUTHORS  CONTRIBUTING.md  Cargo.toml  FORMATTING.md  GUIDE.md  Jenkinsfile  Makefile  README.md  default.nix  nightly.nix  rust-toolchain.toml  rustfmt.toml  shell.nix
.cargo/: config.toml
.ci/: before_deploy.sh
.coverage/: install_kcov.sh
benches/: loop.rs
bigint/: Cargo.toml
bigint/src/: algorithms.rs  lib.rs  m256.rs  mi256.rs  u256.rs  u512.rs
bigint2/: Cargo.toml
blockchain_geth/: Cargo.toml
blockchain_geth/src/: lib.rs
ci/: build.bat  build.sh  install_rust.ps1  install_rust.sh  test.bat  test.sh
cli/: Cargo.toml  profile.html
compat/: Cargo.toml
compat/src/: lib.rs
core/: Cargo.toml
core/src/: delegation.rs  error.rs  external.rs  lib.rs  memory.rs  opcode.rs  stack.rs  trap.rs  utils.rs  valids.rs
core/src/eval/: arithmetic.rs  bitwise.rs  macros.rs  misc.rs  mod.rs
core/tests/: performance.rs
docs/: README.md  development.md  ethtests.md
eltypes/: Cargo.toml
eltypes/src/: lib.rs
evm/: Cargo.toml
evm-tests/ethcore-builtin/: Cargo.toml
evm-tests/ethcore-builtin/src/: kzg.rs  lib.rs
evm-tests/jsontests/: Cargo.toml
evm-tests/jsontests/res/: berlin_builtins.json  istanbul_builtins.json
evm-tests/jsontests/src/: lib.rs  main.rs  state.rs  utils.rs  vm.rs
evm-tests/jsontests/tests/: state.rs  vm.rs
features/evm64/: Cargo.toml
features/evm64/src/: eval.rs  gasometer.rs  lib.rs
future/: Cargo.toml
future/src/: lib.rs
future/tests/: usability.rs
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/src/: backend.rs  grammar.rs  main.rs
fuzzer/: Cargo.toml  README.md
fuzzer/src/: main.rs
gaslighter/: Cargo.toml  mod.rs
gaslighter/json/: blockchain.rs
gasometer/: Cargo.toml
gasometer/src/: consts.rs  cost.rs  costs.rs  lib.rs  memory.rs  metrics.rs  standard.rs  tracing.rs  utils.rs
gethrpc/: Cargo.toml
gethrpc/src/: lib.rs  record.rs
interpreter/: Cargo.toml
interpreter/src/: call_create.rs  error.rs  etable.rs  external.rs  fork.rs  lib.rs  memory.rs  opcode.rs  runtime.rs  stack.rs  trap.rs  utils.rs  valids.rs
interpreter/src/error/: exit.rs  mod.rs  trap.rs
interpreter/src/eval/: arithmetic.rs  bitwise.rs  macros.rs  misc.rs  mod.rs  system.rs
interpreter/src/interpreter/: etable.rs  mod.rs  valids.rs
interpreter/src/machine/: memory.rs  mod.rs  stack.rs
interpreter/src/uint/: ethnum.rs  mod.rs  primitive_types.rs  ruint.rs
interpreter/tests/: performance.rs  usability.rs
jsontests/: Cargo.toml
jsontests/benches/: performance.rs
jsontests/jsontests-derive/: Cargo.toml
jsontests/jsontests-derive/src/: attr.rs  lib.rs  tests.rs  util.rs
jsontests/proc-macro/: Cargo.toml
jsontests/proc-macro/src/: lib.rs
jsontests/res/files/HarnessCorrectnessTests/: invalidAddress.json  invalidBalance.json  invalidCode.json  invalidGas.json  invalidLogs.json  invalidNonce.json  invalidOutValue.json  invalidStorage.json  invalidStorageAddress.json
jsontests/res/files/SputnikVM/vmBitwiseLogicOperation/: sar10.json  sar12.json  sar13.json  sar14.json  sar15.json  sar2.json  sar3.json  sar4.json  sar6.json  sar7.json  sar8.json  sar9.json  shl1.json  shl10.json  shr0.json  shr1.json  shr10.json  shr4.json  shr5.json  shr8.json  shr9.json
jsontests/res/files/SputnikVM/vmConstantinopleTests/: extcodehash0.json  extcodehash1.json  extcodehash2.json  extcodehash3.json  sar0.json  sar1.json  sar10.json  sar11.json  sar5.json  shl0.json  shl2.json  shl3.json  shl4.json  shl5.json  shl6.json  shl7.json  shl8.json  shl9.json  shr2.json  shr3.json  shr6.json  shr7.json
jsontests/src/: blockchain.rs  error.rs  hash.rs  in_memory.rs  lib.rs  main.rs  run.rs  types.rs  util.rs  utils.rs  vm.rs
jsontests/tests/: arithmetic.rs  bitwise.rs  blockinfo.rs  constantinople.rs  eiptests.rs  environment.rs  flow.rs  harness.rs  inputlimits.rs  legacytests.rs  log.rs  old_ethtests.rs  oldethtests.rs  performance.rs  pushdupswap.rs  sha3.rs  sputnikvm.rs  system.rs  vm.rs  vmtests.rs
jsontests/tests/files/: vmArithmeticTest.json
mainnet/: Cargo.toml
mainnet/src/: lib.rs
network/classic/: Cargo.toml
network/classic/src/: lib.rs
network/ellaism/: Cargo.toml
network/ellaism/src/: lib.rs
precompile/: Cargo.toml
precompile/src/: bn128.rs  kzg.rs  lib.rs  modexp.rs  simple.rs
precompile/src/blake2/: eip152.rs  mod.rs
precompiles/: Cargo.toml
regression_test/: Cargo.toml
regtests/: Cargo.toml
regtests/res/: eip150_numbers.json  eip150_records.json  frontier_numbers.json  frontier_records.json  homestead_numbers.json  homestead_records.json  records.json
rlp/: Cargo.toml
rlp/benches/: rlp.rs
rlp/src/: impls.rs  lib.rs  rlpin.rs  stream.rs
rlp/tests/: tests.rs
rlp2/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: context.rs  handler.rs  interrupt.rs  lib.rs  tracing.rs
runtime/src/eval/: macros.rs  mod.rs  system.rs
schema/: vm.capnp
sputnikvm/: Cargo.toml
sputnikvm/src/: lib.rs  rescue.rs
sputnikvm/src/util/: mod.rs
sputnikvm/src/utils/: address.rs  bigint.rs  gas.rs  mod.rs  opcode.rs
sputnikvm/src/utils/bigint/: m256.rs  mi256.rs  mod.rs  u256.rs  u512.rs
sputnikvm/src/vm/: cost.rs  errors.rs  memory.rs  mod.rs  params.rs  patch.rs  pc.rs  run.rs  stack.rs  storage.rs  transaction.rs
sputnikvm/src/vm/commit/: account.rs  blockhash.rs  mod.rs
sputnikvm/src/vm/eval/: check.rs  cost.rs  lifecycle.rs  mod.rs  precompiled.rs  util.rs  utils.rs
sputnikvm/src/vm/eval/run/: arithmetic.rs  bitwise.rs  check.rs  environment.rs  flow.rs  mod.rs  system.rs  utils.rs
sputnikvm/src/vm/run/: mod.rs
sputnikvm/vm/: storage.rs
src/: account.rs  backend.rs  blockchain.rs  call_stack.rs  color.rs  context.rs  error.rs  errors.rs  executor.rs  ffi.rs  gasometer.rs  handler.rs  interrupt.rs  invoker.rs  lib.rs  maybe_borrowed.rs  memory.rs  params.rs  pc.rs  (+6 more)
stateful/: Cargo.toml
stateful/examples/: parallel.rs
stateful/res/: genesis.json  morden.json
stateful/src/: lib.rs
stateful/tests/: genesis.rs
(+205 files in other folders)
