[package]
name = "evm"
version.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
edition.workspace = true

[dependencies]
auto_impl = "1.0"
ethereum = { version = "0.15", default-features = false }
log = { version = "0.4", default-features = false }
primitive-types = { version = "0.12", default-features = false, features = ["rlp"] }
rlp = { version = "0.5", default-features = false }
sha3 = { version = "0.10", default-features = false }

# Optional dependencies
environmental = { version = "1.1.2", default-features = false, optional = true }
scale-codec = { package = "parity-scale-codec", version = "3.2", default-features = false, features = ["derive"], optional = true }
scale-info = { version = "2.11", default-features = false, features = ["derive"], optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }

evm-core = { version = "0.43", path = "core", default-features = false }
evm-runtime = { version = "0.43", path = "runtime", default-features = false }
evm-gasometer = { version = "0.43", path = "gasometer", default-features = false }

[dev-dependencies]
criterion = "0.5"
hex = "0.4"

[[bench]]
name = "loop"
harness = false

[features]
default = ["std", "force-debug"]
std = [
    "ethereum/std",
    "log/std",
    "primitive-types/std",
    "rlp/std",
    "sha3/std",
    "environmental/std",
    "scale-codec/std",
    "scale-info/std",
    "serde/std",
    "evm-core/std",
    "evm-gasometer/std",
    "evm-runtime/std",
]
with-codec = [
    "scale-codec",
    "scale-info",
    "primitive-types/codec",
    "primitive-types/scale-info",
    "ethereum/with-codec",
    "evm-core/with-codec",
]
with-serde = [
    "serde",
    "primitive-types/impl-serde",
    "evm-core/with-serde",
    "ethereum/with-serde",
]
tracing = [
    "environmental",
    "evm-core/tracing",
    "evm-gasometer/tracing",
    "evm-runtime/tracing",
]
force-debug = [
    "evm-core/force-debug",
    "evm-gasometer/force-debug",
]
create-fixed = []
print-debug = ["evm-gasometer/print-debug"]

[workspace.package]
version = "0.43.0"
license = "Apache-2.0"
authors = ["Aurora Labs <hello@aurora.dev>", "Wei Tang <hi@that.world>", "Parity Technologies <admin@parity.io>"]
description = "Portable Ethereum Virtual Machine implementation written in pure Rust."
repository = "https://github.com/sorpaas/rust-evm"
keywords = ["no_std", "ethereum"]
edition = "2021"

[workspace]
resolver = "2"
members = [
    "core",
    "gasometer",
    "runtime",
    "fuzzer",
    "evm-tests/jsontests"
]
