[package]
name = "sputnikvm-cli"
version = "0.6.0"
license = "Apache-2.0"
authors = ["Wei Tang <hi@that.world>"]
description = "SputnikVM CLI"
repository = "https://github.com/ethereumproject/sputnikvm"

[[bin]]
name = "sputnikvm-cli"

[dependencies]
etcommon-bigint = "0.2"
etcommon-hexutil = "0.2"
sputnikvm = { version = "0.9", path = ".." }
gethrpc = { path = '../gethrpc' }
clap = "2.22"
serde_json = "0.9"
flame = "0.2"