[package]
name = "evm-compat"
description = "Compat for Rust EVM."
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
evm = { workspace = true }

[features]
default = ["std"]
std = [
	"evm/std",
]
