[package]
name = "evm-core"
version = "0.17.0"
license = "Apache-2.0"
authors = ["Wei Tang <hi@that.world>", "Parity Technologies <admin@parity.io>"]
description = "Portable Ethereum Virtual Machine implementation written in pure Rust."
repository = "https://github.com/sorpaas/rust-evm"
keywords = ["no_std", "ethereum"]
edition = "2018"

[dependencies]
primitive-types = { version = "0.7", default-features = false }

[dev-dependencies]
hex = "0.4"

[features]
default = ["std"]
std = ["primitive-types/std"]
