[package]
name = "evm-core"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
log = { version = "0.4", optional = true }
primitive-types = { version = "0.12", default-features = false }
scale-codec = { package = "parity-scale-codec", version = "3.2", default-features = false, features = ["derive", "full"], optional = true }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
hex = "0.4"

[features]
default = ["std"]
std = [
    "primitive-types/std",
    "serde/std",
    "scale-codec/std",
    "scale-info/std",
]
with-codec = [
    "scale-codec",
    "scale-info",
    "primitive-types/impl-codec",
]
with-serde = [
    "serde",
    "primitive-types/impl-serde",
]
force-debug = [
    "log",
]
tracing = []
