[package]
name = "evm-future"
description = "Async interpreter for Rust EVM, mainly for async precompiles."
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
evm = { path = ".." }
environmental = "1.1"

[dev-dependencies]
primitive-types = "0.12"
