[package]
name = "evm-fuzzer"
version = "0.3.0"
authors = [
    "Vincent Ulitzsch <vincent@srlabs.de>",
    "Bruno Produit <bruno@srlabs.de>",
    "Louis Merlin <louis@srlabs.de>"
]
edition = "2021"
description = "Multi-Fuzzer for EVM that is based on ziggy and arbitrary"
license = "Apache-2.0"

[workspace]

[dependencies]
ziggy = { version = "0.3.0", default-features = false }
evm = { path= "../" }
primitive-types = { version = "0.12.1", default-features = false }
arbitrary = { version = "1", features= ["derive"] }
libfuzzer-sys = { version = "0.4.5"}
