[package]
name = "evm-fuzz"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbitrary = { version = "1.4.1", features = ["derive"] }
ziggy = { version = "1.3.2", default-features = false }
# evm
evm = { workspace = true }
# grammar
hex = "0.4.3"
# memory analysis
stats_alloc = { version = "0.1.10", features = ["nightly"] }

[features]
fuzzing = []
