[package]
name = "gaslighter"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Stewart Mackenzie <setori88@gmail.com>", "Wei Tang <hi@that.world>"]
description = "SputnikVM - a Virtual Machine tester"

[[bin]]
name = "gaslighter"
path = "./mod.rs"

[dependencies]
sputnikvm = { path = '../sputnikvm' }
clap = "2.22"
libc = "0.2"
libloading = "0.3"
serde_json = "0.9"
rustyline = "1.0.0"
