[package]
name = "evm-gasometer"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
environmental = { version = "1.1.2", default-features = false, optional = true }
log = { version = "0.4", optional = true }
primitive-types = { version = "0.12", default-features = false }

evm-core = { version = "0.43", path = "../core", default-features = false }
evm-runtime = { version = "0.43", path = "../runtime", default-features = false }

[features]
default = ["std"]
std = [
    "environmental/std",
    "primitive-types/std",
    "evm-core/std",
    "evm-runtime/std",
]
tracing = [
    "environmental",
]

force-debug = [
    "log",
]
print-debug = ["force-debug"]
