[package]
name = "evm-gasometer"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
primitive-types.workspace = true
evm-core.workspace = true
evm-runtime.workspace = true

# Optional
environmental = { version = "1.1.2", default-features = false, optional = true }
log = { version = "0.4", optional = true }

[features]
default = ["std"]
std = [
    "environmental/std",
    "primitive-types/std",
    "evm-core/std",
    "evm-runtime/std",
]
tracing = [
    "environmental",
]

force-debug = [
    "log",
]
print-debug = ["force-debug"]
