[package]
name = "gethrpc"
version = "0.0.0"
license = "Apache-2.0"
authors = ["Stewart Mackenzie <setori88@gmail.com>", "Wei Tang <hi@that.world>"]
description = "gethrpc - provides functionality for interacting with geth's blockchain."
repository = "https://github.com/ethereumproject/sputnikvm"

[dependencies]
clap = "2.22"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
hyper = "0.10.9"
hyper-native-tls = "0.2.4"