[package]
name = "evm-interpreter"
version = "1.0.0-dev"
edition = "2021"
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
description = "The interpreter part of Ethereum Virtual Machine"

[dependencies]
primitive-types = { version = "0.12", default-features = false, features = ["rlp"] }
rlp = { version = "0.5", default-features = false }
scale-codec = { package = "parity-scale-codec", version = "3.2", default-features = false, features = ["derive", "full"], optional = true }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
sha3 = { version = "0.10", default-features = false }
auto_impl = "1.1"

[dev-dependencies]
hex = "0.4"

[features]
default = ["std"]
std = [
	"primitive-types/std",
	"rlp/std",
	"serde/std",
	"scale-codec/std",
	"scale-info/std",
	"sha3/std",
]
with-codec = [
	"scale-codec",
	"scale-info",
	"primitive-types/impl-codec",
]
with-serde = [
	"serde",
	"primitive-types/impl-serde",
]
