[package]
name = "evm-interpreter"
version = "1.0.0-dev"
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
description = "The interpreter part of Ethereum Virtual Machine"

[dependencies]
auto_impl = "1.2"
paste = "1.0"
primitive-types = { version = "0.12", default-features = false, features = ["rlp"] }
rlp = { version = "0.5", default-features = false }
scale-codec = { package = "parity-scale-codec", version = "3.2", default-features = false, features = ["derive", "full"], optional = true }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
sha3 = { version = "0.10", default-features = false }

[dev-dependencies]
hex = "0.4"

[features]
default = ["std"]
std = [
	"primitive-types/std",
	"rlp/std",
	"scale-codec/std",
	"scale-info/std",
	"serde/std",
	"sha3/std",
]
scale = [
	"scale-codec",
	"scale-info",
	"primitive-types/impl-codec",
]
serde = [
	"dep:serde",
	"primitive-types/impl-serde",
]
