[package]
name = "jsontests"
version = "1.0.0-beta.1"
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }

[dependencies]
clap = { version = "4", features = ["derive"] }
ethereum = "0.15.0"
evm = { path = ".." }
evm-precompile = { path = "../precompile" }
hex = { version = "0.4", features = ["serde"] }
primitive-types = { version = "0.12", features = ["rlp", "serde"] }
rlp = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
sha3 = "0.10"
thiserror = "1"
