[package]
name = "jsontests"
version = "1.0.0-dev"
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }

[dependencies]
clap = { version = "4", features = ["derive"] }
ethereum = "0.15.0"
evm = { workspace = true, features = ["std"] }
evm-mainnet = { workspace = true, features = ["std"] }
hex = { version = "0.4", features = ["serde"] }
rlp = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
sha3 = "0.10"
thiserror = "1"

[dev-dependencies]
jsontests-proc-macro = { path = "proc-macro" }
