[package]
name = "evm-precompile"
version = "0.0.0-dev"
edition = { workspace = true }
rust-version = "1.65.0"
authors = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
description = "Standard EVM precompiles."

[dependencies]
bn = { package = "substrate-bn", version = "0.6", default-features = false }
evm = { path = "..", default-features = false }
k256 = { version = "0.13", features = ["ecdsa"], default-features = false }
num = { version = "0.4", default-features = false, features = ["alloc"] }
primitive-types = { version = "0.12", default-features = false, features = ["rlp"] }
ripemd = { version = "0.1", default-features = false }
sha2 = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }

[features]
default = ["std"]
std = [
	"evm/std",
	"k256/std",
	"num/std",
	"primitive-types/std",
	"ripemd/std",
	"sha2/std",
	"sha3/std",
]
