[package]
name = "evm-precompile"
version = "1.0.0"
edition = { workspace = true }
rust-version = "1.87.0"
authors = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
description = "Standard EVM precompiles."
license = { workspace = true }

[dependencies]
bn = { package = "substrate-bn", version = "0.6", default-features = false }
evm = { workspace = true }
k256 = { version = "0.13", features = ["ecdsa"], default-features = false }
num = { version = "0.4", default-features = false, features = ["alloc"] }
primitive-types = { version = "0.12", default-features = false, features = ["rlp"] }
ripemd = { version = "0.1", default-features = false }
sha2 = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }
aurora-engine-modexp = { version = "1.2", default-features = false }
ark-bls12-381 = { version = "0.5", default-features = false, features = ["curve"] }
ark-ec = { version = "0.5", default-features = false }
ark-ff = { version = "0.5", default-features = false }
ark-serialize = { version = "0.5", default-features = false }
hex-literal = "1"

[features]
default = ["std"]
std = [
	"evm/std",
	"k256/std",
	"num/std",
	"primitive-types/std",
	"ripemd/std",
	"sha2/std",
	"sha3/std",
	"aurora-engine-modexp/std",
	"ark-bls12-381/std",
	"ark-ec/std",
	"ark-ff/std",
	"ark-serialize/std",
]
