[package]
name = "regression_test"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Stewart Mackenzie <setori88@gmail.com>", "Wei Tang <hi@that.world>"]
description = "regression_test - performs a regression test of the entire ethereum classic blockchain."

[[bin]]
name = "regression_test"

[dependencies]
sputnikvm = { path = '../sputnikvm' }
gethrpc = { path = '../gethrpc' }
clap = "2.22"
serde_json = "0.9"
