[package]
name = "regtests"
version = "0.6.0"
license = "Apache-2.0"
authors = ["Stewart Mackenzie <setori88@gmail.com>", "Wei Tang <hi@that.world>"]
description = "regtests - performs a regression test of the entire ethereum classic blockchain."

[[bin]]
name = "regtests"

[dependencies]
sputnikvm = { path = '..' }
gethrpc = { path = '../gethrpc' }
etcommon-block = "0.2"
etcommon-bigint = "0.2"
etcommon-hexutil = "0.2"
clap = "2.22"
serde_json = "0.9"
