[package]
name = "regtests"
version = "0.0.0"
license = "Apache-2.0"
authors = ["Stewart Mackenzie <setori88@gmail.com>", "Wei Tang <hi@that.world>"]
description = "regtests - performs a regression test of the entire ethereum classic blockchain."

[[bin]]
name = "regtests"

[dependencies]
evm = { path = '..' }
evm-network-classic = { path = "../network/classic" }
gethrpc = { path = '../gethrpc' }
ethereum-block = "0.3"
ethereum-bigint = "0.2"
ethereum-hexutil = "0.2"
clap = "2.22"
serde_json = "0.9"
