[package]
name = "regtests"
version = "0.0.0"
license = "Apache-2.0"
authors = ["Stewart Mackenzie <setori88@gmail.com>", "Wei Tang <hi@that.world>"]
description = "regtests - performs a regression test of the entire ethereum classic blockchain."
repository = "https://github.com/etclabscore/sputnikvm"
edition = "2018"

# Since we have an explicit [[bin]] section below, we add the
# following autobins line allow prevent Cargo to automatically infer
# binary targets. Should get moved be turned into a [[test]] instead?
#
# In the Rust 2018 edition this will be necessary.  See
# https://github.com/rust-lang/cargo/issues/5330
autobins = false

[[bin]]
name = "regtests"
path = "src/bin/main.rs"

[dependencies]
evm = { path = '..' }
evm-network-classic = { path = "../network/classic" }
gethrpc = { path = '../gethrpc' }
ethereum-block = "0.4"
ethereum-bigint = "0.2"
ethereum-hexutil = "0.2"
clap = "2.22"
serde_json = "1.0"
