[package]
name = "evm-runtime"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
auto_impl.workspace = true
primitive-types.workspace = true
sha3.workspace = true
evm-core.workspace = true

# Optional
environmental = { version = "1.1", default-features = false, optional = true }

[features]
default = ["std"]
std = [
    "environmental/std",
    "primitive-types/std",
    "sha3/std",
    "evm-core/std",
]
tracing = [
    "environmental",
]
