[package]
name = "evm-runtime"
version = "0.43.0"
license = "Apache-2.0"
authors = ["Wei Tang <hi@that.world>", "Parity Technologies <admin@parity.io>"]
description = "Ethereum Virtual Machine"
repository = "https://github.com/rust-ethereum/evm"
keywords = ["no_std", "ethereum"]
edition = "2018"

[dependencies]
auto_impl = "1.0"
environmental = { version = "1.1.2", default-features = false, optional = true }
primitive-types = { version = "0.13", default-features = false }
sha3 = { version = "0.10", default-features = false }

evm-core = { version = "0.43", path = "../core", default-features = false }

[features]
default = ["std"]
std = [
	"environmental/std",
	"primitive-types/std",
	"sha3/std",
	"evm-core/std",
]
tracing = [
	"environmental",
]
