[package]
name = "sputnikvm"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Stewart Mackenzie <setori88@gmail.com>", "Wei Tang <hi@that.world>"]
description = "SputnikVM - a Portable Blockchain Virtual Machine"

[lib]
name = "sputnikvm"
crate-type = ["rlib", "cdylib"]

[dependencies]
log = "0.3"
rust-crypto = "^0.2"
rlp = { path = '../rlp' }
bigint = { path = '../bigint' }
bitflags = "0.9"