[package]
name = "sputnikvm"
version = "0.2.0"
license = "Apache-2.0"
authors = ["Stewart Mackenzie <setori88@gmail.com>", "Wei Tang <hi@that.world>"]
description = "SputnikVM - a Portable Blockchain Virtual Machine"
repository = "https://github.com/ethereumproject/sputnikvm"

[lib]
name = "sputnikvm"
crate-type = ["rlib", "cdylib"]

[dependencies]
log = "0.3"
tiny-keccak = "1.2"
ripemd160 = "0.5.2"
sha2 = "0.5.3"
digest = { version = "0.5", features = ["std"]}
secp256k1 = "0.6.2"
sputnikvm-rlp = { path = '../rlp' }
sputnikvm-bigint = { path = '../bigint' }