[package]
name = "evm-stateful"
version = "0.10.0"
license = "Apache-2.0"
description = "Stateful evm-rs wrapped with tries."
authors = ["Wei Tang <hi@that.world>"]
repository = "https://github.com/etclabscore/sputnikvm"

[dependencies]
evm = { version = "0.10", path = '..' }
ethereum-bigint = "0.2"
ethereum-trie = "0.3"
ethereum-block = "0.3"
ethereum-rlp = "0.2"
sha3 = "0.6"
rand = "0.3"

[dev-dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
lazy_static = "0.2"
ethereum-hexutil = "0.2"
evm-network-classic = { path = "../network/classic" }
