[package]
name = "evm-stateful"
version = "0.11.0"
license = "Apache-2.0"
description = "Stateful evm-rs wrapped with tries."
authors = ["Wei Tang <hi@that.world>"]
repository = "https://github.com/ethereumproject/evm-rs"
edition = "2018"

[dependencies]
evm = { version = "0.11", path = '..', default-features = false, features = ["std"] }
ethereum-bigint = { version = "0.2", default-features = false, features = ["std"] }
ethereum-trie = { version = "0.3", default-features = false }
ethereum-block = { version = "0.4", default-features = false }
ethereum-rlp = { version = "0.2", default-features = false, features = ["std"] }
sha3 = "0.6"
rand = "0.3"

[dev-dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
lazy_static = "0.2"
ethereum-hexutil = "0.2"
evm-network-classic = { version = "0.11", path = "../network/classic" }

[features]
default = ["rust-secp256k1"]
c-secp256k1 = ["evm/c-secp256k1", "ethereum-block/c-secp256k1"]
rust-secp256k1 = ["evm/libsecp256k1", "ethereum-block/rust-secp256k1"]
