[package]
description = "ethereum vm builtin"
name = "ethcore-builtin"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
bn = { git = "https://github.com/paritytech/bn", rev = "b048fe1", default-features = false }
byteorder = "1.3.2"
eip-152 = { path = "../EIP-152" }
ethereum-types = "0.14"
ethjson = { path = "../ethjson" }
keccak-hash = "0.10"
log = "0.4"
num = "0.2"
parity-bytes = "0.1"
libsecp256k1 = "0.7"
ripemd = { version = "0.1", default-features = false }
sha2 = { version = "0.10.0", default-features = false }
eth_pairings = { git = "https://github.com/matter-labs/eip1962.git", default-features = false, features = ["eip_2537"], rev = "ece6cbabc41948db4200e41f0bfdab7ab94c7af8" }

[dev-dependencies]
hex-literal = "0.4"
maplit = "1.0.2"
