[package]
name = "evm-jsontests"
version.workspace = true
license = "GPL-3.0"
authors.workspace = true
description = "EVM json tests"
repository.workspace = true
keywords.workspace = true
edition.workspace = true

[dependencies]
evm = { path = "../..", version = "0.43" }
ethereum = "0.15.0"
primitive-types = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
clap = { version = "4.5", features = ["cargo"] }
ethjson = { path = "../ethjson", features = ["test-helpers"] }
libsecp256k1 = "0.7"
ethcore-builtin = { path = "../ethcore-builtin" }
rlp = "0.5"
sha3 = "0.10"
parity-bytes = "0.1"
env_logger = "0.11"
lazy_static = "1.4.0"

[features]
enable-slow-tests = []
