[package]
name = "jsontests-derive"
version = "0.1.0"
authors = ["Mike Lubinets <lubinetsm@yandex.ru>"]
readme = "README.md"
license = "MIT"
edition = "2018"

[lib]
doctest = false
proc-macro = true
path = "src/lib.rs"

[dependencies]
syn = "0.11"
quote = "0.3"
serde_json = "1.0"
failure = "0.1.2"
itertools = "0.7.8"
criterion = "0.2.5"

