[package]
name = "evm-network-classic"
version = "0.10.0"
description = "Ethereum Classic patches for SputnikVM."
license = "Apache-2.0"
authors = ["Wei Tang <hi@that.world>"]
repository = "https://source.that.world/source/evm-rs"

[dependencies]
evm = { version = "0.10", path = "../.." }
ethereum-bigint = { version = "0.2", default-features = false }
